--- a/Oceny/Base.lproj/Main.storyboard
+++ b/Oceny/Base.lproj/Main.storyboard
@@ -168,7 +168,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BTO-3D-Fag">
-                                                    <rect key="frame" x="0.0" y="5" width="393" height="34"/>
+                                                    <rect key="frame" x="20" y="5" width="353" height="34"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <textInputTraits key="textInputTraits"/>
@@ -203,6 +203,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="ItE-NE-LyH" kind="show" identifier="PickGame" id="gPK-aE-7Hv"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -220,7 +223,7 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="Llj-7i-Fvy">
                             <connections>
-                                <segue destination="X2S-Pg-0qv" kind="unwind" unwindAction="savePlayerDetail:" id="KXb-jT-VF9"/>
+                                <segue destination="X2S-Pg-0qv" kind="unwind" identifier="SavePlayerDetail" unwindAction="savePlayerDetail:" id="KXb-jT-VF9"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -233,6 +236,44 @@
                 <exit id="X2S-Pg-0qv" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2950.3816793893129" y="-563.38028169014092"/>
+        </scene>
+        <!--Wybierz grę-->
+        <scene sceneID="bjo-fH-Caz">
+            <objects>
+                <tableViewController title="Wybierz grę" id="ItE-NE-LyH" customClass="GamePickerViewController" customModule="Oceny" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="HPK-Vy-QSn">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="GameCell" textLabel="WbY-CG-Di6" style="IBUITableViewCellStyleDefault" id="r4Z-HN-NZA">
+                                <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="r4Z-HN-NZA" id="INW-OZ-EAa">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="WbY-CG-Di6">
+                                            <rect key="frame" x="20" y="0.0" width="353" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="ItE-NE-LyH" id="e0N-HG-SxX"/>
+                            <outlet property="delegate" destination="ItE-NE-LyH" id="6qh-aQ-bb8"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="AGA-Bb-QNQ"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="REt-mZ-QVv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3864" y="-562"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="PaM-rG-9Mw">
